--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -8,7 +8,7 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	  	<link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 	  	<!-- local stuff -->
 		<title>Caravel - {% block title %}{% endblock %}</title>
@@ -27,10 +27,10 @@
 					<a class="nav-link" href="{{ url_for('index') }}">Home</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="{{ url_for('set_comp_env') }}">Environment settings <i class="fas fa-cog"></i></a>
+					<a class="nav-link" href="{{ url_for('set_comp_env') }}">Environment settings <i class="fa fa-cog"></i></a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="{{ url_for('process') }}">Process <i class="fas fa-tasks"></i></a>
+					<a class="nav-link" href="{{ url_for('process') }}">Process <i class="fa fa-tasks"></i></a>
 				</li>
 				{% block navbar %}
 				{% endblock %}
@@ -53,12 +53,18 @@
 		<div id="main">
 			<body>
 				<div class="divider-15">
-					{% for message in get_flashed_messages() %}
-						<div class="alert alert-warning col-md-5">
-							<button type="button" class="close" data-dismiss="alert">&times;</button>
-							{{ message }}
-						</div>
-					{% endfor %}
+						{% with messages = get_flashed_messages() %}
+						  {% if messages %}
+						    <ul class=flashes>
+						    {% for message in messages %}
+		  						<div class="alert alert-warning col-md-5">
+									<button type="button" class="close" data-dismiss="alert">&times;</button>
+									{{ message }}
+								</div>
+						    {% endfor %}
+						    </ul>
+						  {% endif %}
+						{% endwith %}
 					{% block body %}{% endblock %}
 					{% block content %}{% endblock %}
 				</div>
