changes related to #88: - add the summary link in the template navbar - make sure it cant be accessed when no project is selected

--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -32,6 +32,9 @@
 				<li class="nav-item active">
 					<a class="nav-link" href="{{ url_for('process') }}">Process <i class="fa fa-tasks"></i></a>
 				</li>
+				  <li class="nav-item active">
+				    <a class="nav-link" href="{{ url_for('summary') }}">Summary <i class="fa fa-bar-chart"></i></a>
+				  </li>
 				{% block navbar %}
 				{% endblock %}
 			</ul> 
