show spinning icon when looper is processing

--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -24,7 +24,7 @@
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item active">
-					<a class="nav-link" href="{{ url_for('index') }}">Home</a>
+					<a class="nav-link" href="{{ url_for('index') }}">Home <i class="fa fa-home" aria-hidden="true"></i></a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="{{ url_for('set_comp_env') }}">Environment settings <i class="fa fa-cog"></i></a>
