--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -1,9 +1,18 @@
 <!-- This page serves the automatic html form elements display -->
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script type="text/javascript">
+        $('#execute').bind('click', function() {
+            $('#execute').html('Processing <i class="fa fa-spinner fa-pulse fa-fw"></i>');
+            $('#action_form').submit();
+            return false;
+        });
+    </script>
 </head>
 <h3>Select options</h3>
-<form method="POST" action="{{ url_for('action') }}">
+<form id="action_form" method="POST" action="{{ url_for('action') }}">
     <input name="_csrf_token" type="hidden" value="{{ csrf_token() }}">
     {% for type, data in grouped_form_data.items() %}
         {% set opts = data[0] %}
@@ -48,7 +57,7 @@
         {% endfor %}
     {% endfor %}
     <div class="divider-vertical">
-        <button type="submit" class="btn btn-outline-dark ml-2">GO</button>
+        <button id="execute" type="submit" class="btn btn-outline-dark ml-2">GO <i class="fa fa-spinner"></i></button>
     </div>
 </form>
 <div>
