remove icon from GO button

--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -57,7 +57,7 @@
         {% endfor %}
     {% endfor %}
     <div class="divider-vertical">
-        <button id="execute" type="submit" class="btn btn-outline-dark ml-2">GO <i class="fa fa-spinner"></i></button>
+        <button id="execute" type="submit" class="btn btn-outline-dark ml-2">GO</i></button>
     </div>
 </form>
 <div>
