add spinning bug badge if in debug mode

--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -49,6 +49,9 @@
 			<a class="nav-link" href="{{ url_for('index', start_over=True) }}">
 				<button type="submit" class="btn btn-outline-light">START OVER <i class="fa fa-undo"></i></button>
 			</a>
+			{% if debug %}
+				<button type="submit" class="btn btn-danger" disabled><i class="fa fa-bug fa-spin fa-1x fa-fw"></i></button>
+			{% endif %}
 		</div>
 	</nav>
 
