navbar links styling

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -130,11 +130,11 @@ div.col-slider {
   padding-right: 0px;
 }
 
-.nav-link {
+.nav-item {
   color: white;
   }
 
-.nav-link:hover {
+.nav-link {
   color: white;
   }
 
