#129; reduce padding in table, add missing metadata

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -188,3 +188,8 @@ div#status-table_paginate {
 .container-fluid {
   padding: 15px;
 }
+
+#status-table tr td {
+    height: 10px;
+    padding: 5px;
+}
