tabs instead of collapsible list in preferences

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -138,6 +138,10 @@ div.col-slider {
   color: white;
   }
 
+.nav-link#tab {
+  color: black;
+  }
+
 .left_footer {
   width: 30%;
   text-align: left;
