fix index page layout, remove duplicated prefereces btn

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -227,3 +227,7 @@ div#projects-table_info {
 .card-body#table {
   padding-top: 0px;
 }
+
+.container#project-table {
+  max-width: none !important;
+}
