make project name larger, merge cols

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -233,3 +233,7 @@ div#projects-table_info {
     -webkit-transform:rotate(-90deg);
     transform:rotate(-90deg);
 }
+
+.indented {
+    padding-left: 25px !important;
+}
