--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -136,6 +136,7 @@ div.col-slider {
 
 .nav-link {
   color: white;
+  padding: 0.5rem 1rem 0.5rem 0rem
   }
 
 .nav-link#tab {
@@ -237,3 +238,4 @@ div#projects-table_info {
 .indented {
     padding-left: 25px !important;
 }
+
