disable removal of subprojects, update reqs

--- a/caravel/static/style.css
+++ b/caravel/static/style.css
@@ -136,7 +136,7 @@ div.col-slider {
 
 .nav-link {
   color: white;
-  padding: 0.5rem 1rem 0.5rem 0rem
+  padding: 0.5rem 1rem 0.5rem 0rem !important;
   }
 
 .nav-link#tab {
